Fix footer layout. Make vertical scroll bar visible by default.

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -92,7 +92,7 @@ div
         min-width: 120px
         min-height: 120px
         width: 120px
-        height: 120px
+        height: 300px
         background-color: #fff
 
     .mock-content
@@ -100,7 +100,7 @@ div
         pointer-events: none
         position: absolute
         width: 88px
-        height: 88px
+        height: 268px
         padding: 1rem
         font-size: 1.2rem
         color: #406071
